--- a/comar/comar/po/pt_BR.po
+++ b/comar/comar/po/pt_BR.po
@@ -1,4 +1,4 @@
-# Translation of comar.po to Brazillian Portuguese
+# Translation of pt_BR.po to Brazillian Portuguese
 # COMAR - Configuration Manager.
 # Copyright (C) 2006 TUBITAK/UEKAE
 # This file is distributed under the same license as the COMAR package.
@@ -6,12 +6,12 @@
 # Pedro Leite <pedro.leite@gmail.com>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: comar\n"
+"Project-Id-Version: pt_BR\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-07 21:36+0200\n"
-"PO-Revision-Date: 2007-02-06 11:53-0300\n"
+"PO-Revision-Date: 2007-02-18 21:07-0300\n"
 "Last-Translator: Pedro Leite <pedro.leite@gmail.com>\n"
-"Language-Team: Brazillian Portuguese\n"
+"Language-Team: Brazillian Portuguese <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-ptbr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
