--- a/trunk/plsa/po/pt_BR.po
+++ b/trunk/plsa/po/pt_BR.po
@@ -1,16 +1,16 @@
-# Translation of plsa.po to Brazillian Portuguese
+# Translation of pt_BR.po to Brazillian Portuguese
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Pedro Leite <pedro.leite@gmail.com>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: plsa\n"
+"Project-Id-Version: pt_BR\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-05 16:50+0200\n"
-"PO-Revision-Date: 2007-02-18 17:21-0300\n"
+"PO-Revision-Date: 2007-02-18 20:35-0300\n"
 "Last-Translator: Pedro Leite <pedro.leite@gmail.com>\n"
-"Language-Team: Brazillian Portuguese\n"
+"Language-Team: Brazillian Portuguese <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-ptbr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -23,63 +23,63 @@ msgstr ""
 
 #: plsa/__init__.py:113
 msgid "security@pardus.org.tr"
-msgstr ""
+msgstr "security@pardus.org.tr"
 
 #: plsa/__init__.py:114
 msgid "http://security.pardus.org.tr"
-msgstr ""
+msgstr "http://security.pardus.org.tr"
 
 #: plsa/__init__.py:117
 msgid "Date"
-msgstr ""
+msgstr "Data"
 
 #: plsa/__init__.py:118
 msgid "Revision"
-msgstr ""
+msgstr "Revisão"
 
 #: plsa/__init__.py:119
 msgid "Severity"
-msgstr ""
+msgstr "Severidade"
 
 #: plsa/__init__.py:120
 msgid "Type"
-msgstr ""
+msgstr "Tipo"
 
 #: plsa/__init__.py:132 plsa/__init__.py:133
 msgid "Summary"
-msgstr ""
+msgstr "Resumo"
 
 #: plsa/__init__.py:139 plsa/__init__.py:140
 msgid "Description"
-msgstr ""
+msgstr "Descrição"
 
 #: plsa/__init__.py:146
 msgid "Affected packages:"
-msgstr ""
+msgstr "Pacotes afetados:"
 
 #: plsa/__init__.py:149
 msgid "all versions"
-msgstr ""
+msgstr "todas as versões"
 
 #: plsa/__init__.py:151
 #, python-format
 msgid "all before %s"
-msgstr ""
+msgstr "todas antes de %s"
 
 #: plsa/__init__.py:158 plsa/__init__.py:159
 msgid "Resolution"
-msgstr ""
+msgstr "Solução"
 
 #: plsa/__init__.py:162
 #, python-format
 msgid ""
 "There are update(s) for %s. You can update them via Package Manager or with "
 "a single command from console:"
-msgstr ""
+msgstr "Existe(m) atualização(ões) para %s. Você pode atualizá-los via Gerenciador de Pacotes ou com um simples comando no console:"
 
 #: plsa/__init__.py:168 plsa/__init__.py:169
 msgid "References"
-msgstr ""
+msgstr "Referências"
 
 #: plsa-cli:40
 #, python-format
@@ -88,23 +88,23 @@ msgstr ""
 
 #: plsa-cli:40
 msgid "LANG"
-msgstr ""
+msgstr "LANG"
 
 #: plsa-cli:42
 msgid "open KMail compose dialog"
-msgstr ""
+msgstr "abrir diálogo de composição do KMail"
 
 #: plsa-cli:54
 #, python-format
 msgid "'%s' locale is not supported."
-msgstr ""
+msgstr "localização '%s' não é suportada."
 
 #: plsa-cli:59
 #, python-format
 msgid "Unable to read %s."
-msgstr ""
+msgstr "Incapaz de ler %s."
 
 #: plsa-cli:67
 msgid "XML file has errors:"
-msgstr ""
+msgstr "Arquivo XML contém erros:"
 
