--- a/trunk/tasma/disk-manager/po/pt_BR.po
+++ b/trunk/tasma/disk-manager/po/pt_BR.po
@@ -1,16 +1,16 @@
-# Translation of disk-manager.po to Brazillian Portuguese
+# Translation of pt_BR.po to Brazillian Portuguese
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Pedro Leite <pedro.leite@gmail.com>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: disk-manager\n"
+"Project-Id-Version: pt_BR\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-02-09 15:33+0200\n"
-"PO-Revision-Date: 2007-02-18 17:30-0300\n"
+"PO-Revision-Date: 2007-02-18 21:06-0300\n"
 "Last-Translator: Pedro Leite <pedro.leite@gmail.com>\n"
-"Language-Team: Brazillian Portuguese\n"
+"Language-Team: Brazillian Portuguese <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-ptbr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,70 +18,70 @@ msgstr ""
 
 #: src/diskform.py:92 src/diskform.py:139
 msgid "Disks"
-msgstr ""
+msgstr "Discos"
 
 #: src/diskform.py:93 src/diskform.py:140
 msgid "Partitions"
-msgstr ""
+msgstr "Partições"
 
 #: src/diskform.py:132 src/disk-manager.py:94 src/disk-manager.py:379
 msgid "Disk Manager"
-msgstr ""
+msgstr "Gerenciador de Disco"
 
 #: src/diskform.py:133
 msgid "File System Type :"
-msgstr ""
+msgstr "Tipo do Sistema de Arquivos:"
 
 #: src/diskform.py:134
 msgid "Mount Point :"
-msgstr ""
+msgstr "Pontos de Montagem:"
 
 #: src/diskform.py:135
 msgid "Additional Options :"
-msgstr ""
+msgstr "Opções Adicionais:"
 
 #: src/diskform.py:136
 msgid "Get Default Options"
-msgstr ""
+msgstr "Obter Opções Padrão"
 
 #: src/diskform.py:137
 msgid "Find Disks Automatically"
-msgstr ""
+msgstr "Encontrar Discos Automaticamente"
 
 #: src/diskform.py:138
 msgid "Show System Partitions"
-msgstr ""
+msgstr "Mostrar Partições do Sistema"
 
 #: src/diskform.py:141
 msgid "To update disk changes the manager must run as root"
-msgstr ""
+msgstr "Para atualizar mudanças no disco, o gerenciador deve ser executado como root"
 
 #: src/disk-manager.py:126
 msgid "User not in disk group !"
-msgstr ""
+msgstr "Usuário não pertence ao grupo \"disk\"!"
 
 #: src/disk-manager.py:227 src/disk-manager.py:250
 msgid "Completed"
-msgstr ""
+msgstr "Completado"
 
 #: src/disk-manager.py:227 src/disk-manager.py:250
 msgid "File /etc/fstab updated !"
-msgstr ""
+msgstr "Arquivo /ets/fstab atualizado!"
 
 #: src/disk-manager.py:268
 #, python-format
 msgid "%s for %s failure !!"
-msgstr ""
+msgstr "Falha no %s para %s!"
 
 #: src/disk-manager.py:296
 msgid "Mount Point"
-msgstr ""
+msgstr "Ponto de Montagem"
 
 #: src/disk-manager.py:297
 msgid "File System Type"
-msgstr ""
+msgstr "Tipo de Sistema de Arquivos"
 
 #: src/disk-manager.py:374
 msgid "Disk Manager is already running!"
-msgstr ""
+msgstr "Gerenciador de Discos já está executando!"
 
