--- a/trunk/tasma/firewall-config/po/pt_BR.po
+++ b/trunk/tasma/firewall-config/po/pt_BR.po
@@ -1,15 +1,15 @@
-# Translation of firewall-config.po to Brazillian Portuguese
+# Translation of pt_BR.po to Brazillian Portuguese
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Pedro Leite <pedro.leite@gmail.com>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: firewall-config\n"
+"Project-Id-Version: pt_BR\n"
 "POT-Creation-Date: 2006-11-17 10:48+0200\n"
-"PO-Revision-Date: 2007-02-01 23:45-0300\n"
+"PO-Revision-Date: 2007-02-18 21:06-0300\n"
 "Last-Translator: Pedro Leite <pedro.leite@gmail.com>\n"
-"Language-Team: Brazillian Portuguese\n"
+"Language-Team: Brazillian Portuguese <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-ptbr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
