--- a/tasma/disk-manager/README
+++ b/tasma/disk-manager/README
@@ -3,3 +3,11 @@ Disk manager
 
 Disk Manager is an application for editing 
 the fstab file in a pretty way.
+
+INSTALLATION
+---------------
+As root (not in sudo)
+ 
+ # python setup.py install
+
+
