--- a/tasma/disk-manager/po/pt_BR.po
+++ b/tasma/disk-manager/po/pt_BR.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pt_BR\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-02-09 15:33+0200\n"
+"POT-Creation-Date: 2007-02-19 10:50+0200\n"
 "PO-Revision-Date: 2007-02-18 21:06-0300\n"
 "Last-Translator: Pedro Leite <pedro.leite@gmail.com>\n"
-"Language-Team: Brazillian Portuguese <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-ptbr>\n"
+"Language-Team: Brazillian Portuguese <http://liste.uludag.org.tr/mailman/"
+"listinfo/pardus-translation-ptbr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -54,7 +55,8 @@ msgstr "Mostrar Partições do Sistema"
 
 #: src/diskform.py:141
 msgid "To update disk changes the manager must run as root"
-msgstr "Para atualizar mudanças no disco, o gerenciador deve ser executado como root"
+msgstr ""
+"Para atualizar mudanças no disco, o gerenciador deve ser executado como root"
 
 #: src/disk-manager.py:126
 msgid "User not in disk group !"
@@ -84,4 +86,3 @@ msgstr "Tipo de Sistema de Arquivos"
 #: src/disk-manager.py:374
 msgid "Disk Manager is already running!"
 msgstr "Gerenciador de Discos já está executando!"
-
