--- a/sysinfo/po/pt_BR/kio_sysinfo.po
+++ b/sysinfo/po/pt_BR/kio_sysinfo.po
@@ -1,4 +1,4 @@
-# Translation of kio_sysinfo.po to Brazillian Portuguese
+# Translation of kio_sysinfo.po to Brazilian Portuguese
 # This file is put in the public domain.
 #
 # Pedro Leite <pedro.leite@gmail.com>, 2007.
@@ -7,9 +7,9 @@ msgstr ""
 "Project-Id-Version: kio_sysinfo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-07 21:36+0200\n"
-"PO-Revision-Date: 2007-02-18 21:06-0300\n"
+"PO-Revision-Date: 2007-02-19 22:24-0300\n"
 "Last-Translator: Pedro Leite <pedro.leite@gmail.com>\n"
-"Language-Team: Brazillian Portuguese <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-ptbr>\n"
+"Language-Team: Brazilian Portuguese <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-ptbr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
