--- a/trunk/tasma/disk-manager/po/pt_BR.po
+++ b/trunk/tasma/disk-manager/po/pt_BR.po
@@ -1,4 +1,4 @@
-# Translation of pt_BR.po to Brazillian Portuguese
+# Translation of pt_BR.po to Brazilian Portuguese
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: pt_BR\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-02-19 10:50+0200\n"
-"PO-Revision-Date: 2007-02-18 21:06-0300\n"
+"PO-Revision-Date: 2007-02-19 22:24-0300\n"
 "Last-Translator: Pedro Leite <pedro.leite@gmail.com>\n"
-"Language-Team: Brazillian Portuguese <http://liste.uludag.org.tr/mailman/"
-"listinfo/pardus-translation-ptbr>\n"
+"Language-Team: Brazilian Portuguese <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-ptbr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -55,8 +54,7 @@ msgstr "Mostrar Partições do Sistema"
 
 #: src/diskform.py:141
 msgid "To update disk changes the manager must run as root"
-msgstr ""
-"Para atualizar mudanças no disco, o gerenciador deve ser executado como root"
+msgstr "Para atualizar mudanças no disco, o gerenciador deve ser executado como root"
 
 #: src/disk-manager.py:126
 msgid "User not in disk group !"
@@ -86,3 +84,4 @@ msgstr "Tipo de Sistema de Arquivos"
 #: src/disk-manager.py:374
 msgid "Disk Manager is already running!"
 msgstr "Gerenciador de Discos já está executando!"
+
