--- a/trunk/pardusman/po/tr.po
+++ b/trunk/pardusman/po/tr.po
@@ -243,7 +243,7 @@ msgstr "Proje seçin..."
 
 #: gui.py:361
 msgid "Project '%s' opened."
-msgstr "Proje '%s' açıldı."
+msgstr "'%s' projesi açıldı."
 
 #: gui.py:368
 msgid "Saved."
